--- a/hello/package.json
+++ b/hello/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/grunt/bin/grunt build"
+    "build": "grunt build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+   
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-ie": "^6.7.0",
@@ -18,7 +19,9 @@
     "grunt-contrib-copy": "^1.0.0"
   },
   "dependencies": {
+    "@webcomponents/template": "^1.4.0",
     "@webcomponents/html-imports": "^1.2.0",
+    "@webcomponents/webcomponents-platform": "^1.0.0",
     "@webcomponents/webcomponentsjs": "^2.2.1"
   }
 }
